--- a/1.21.1/gradle.properties
+++ b/1.21.1/gradle.properties
@@ -5,7 +5,7 @@ copyBuildJar=true
 # Mod Attributes
 modId=statuemenus
 modName=Statue Menus
-modVersion=21.0.2
+modVersion=21.1.0
 modAuthor=Fuzs
 modDescription=A library for creating configuration screens for armor stand-like entities.
 modLicense=MPL-2.0
@@ -19,9 +19,9 @@ modForgeDisplayTest=IGNORE_ALL_VERSION
 modFabricEnvironment=*
 
 # Version Catalog
-dependenciesVersionCatalog=1.21-v25
-#dependenciesPuzzlesLibVersion=21.0.8
-#dependenciesMinPuzzlesLibVersion=21.0.8
+dependenciesVersionCatalog=1.21.1-v6
+dependenciesPuzzlesLibVersion=21.1.8
+dependenciesMinPuzzlesLibVersion=21.1.8
 
 # Mod Publishing
 projectReleaseType=release
