--- a/1.21.6/gradle.properties
+++ b/1.21.6/gradle.properties
@@ -5,7 +5,7 @@ copyBuildJar=true
 # Mod Attributes
 modId=statuemenus
 modName=Statue Menus
-modVersion=21.6.0
+modVersion=21.6.1
 modAuthor=Fuzs
 modDescription=A library for creating configuration screens for armor stand-like entities.
 modLicense=MPL-2.0
@@ -19,9 +19,9 @@ modForgeDisplayTest=IGNORE_ALL_VERSION
 modFabricEnvironment=*
 
 # Version Catalog
-dependenciesVersionCatalog=1.21.6-v7
-dependenciesPuzzlesLibVersion=21.6.2
-dependenciesMinPuzzlesLibVersion=21.6.2
+dependenciesVersionCatalog=1.21.6-v9
+#dependenciesPuzzlesLibVersion=21.6.2
+#dependenciesMinPuzzlesLibVersion=21.6.2
 
 # Mod Publishing
 projectReleaseType=release
