--- a/1.21.11/gradle.properties
+++ b/1.21.11/gradle.properties
@@ -1,35 +1,28 @@
-org.gradle.jvmargs=-Xmx4G
-org.gradle.daemon=false
-copyBuildJar=true
+org.gradle.caching=true
+org.gradle.configuration-cache=false
+org.gradle.daemon=true
+org.gradle.jvmargs=-Xmx2G
+org.gradle.parallel=true
+loom.ignoreDependencyLoomVersionValidation=true
 
-# Mod Attributes
-modId=statuemenus
-modName=Statue Menus
-modVersion=21.10.6
-modAuthor=Fuzs
-modDescription=A library for creating configuration screens for armor stand-like entities.
-modLicense=MPL-2.0
-modSourceUrl=https://github.com/Fuzss/statuemenus
-modIssueUrl=https://github.com/Fuzss/statuemenus/issues
-modUpdateUrl=https://raw.githubusercontent.com/Fuzss/modresources/main/update/statuemenus.json
-modMavenGroup=fuzs.statuemenus
-# "MATCH_VERSION" for a mod required on both sides, "IGNORE_SERVER_VERSION" for a server only mod, "IGNORE_ALL_VERSION" for a client only mod
-modForgeDisplayTest=IGNORE_ALL_VERSION
-# "*" for a mod loaded on both sides, "server" for a server only mod, "client" for a client only mod
-modFabricEnvironment=*
+project.libs=1.21.10-SNAPSHOT
+project.platforms=Common, Fabric, NeoForge
+project.plugins=1.0-SNAPSHOT
 
-# Version Catalog
-dependenciesVersionCatalog=1.21.10-v1
-#dependenciesPuzzlesLibVersion=21.7.0
-#dependenciesMinPuzzlesLibVersion=21.7.0
+mod.authors=Fuzs
+mod.description=A library for creating configuration screens for armor stand-like entities.
+mod.group=fuzs.statuemenus
+mod.id=statuemenus
+mod.license=MPL-2.0
+mod.name=Statue Menus
+mod.version=21.10.6
 
-# Mod Publishing
-projectReleaseType=release
-projectCurseForgeId=0
-projectModrinthId=0
+dependencies.fabric.fabricapi=required
+dependencies.fabric.forgeconfigapiport=required
+dependencies.fabric.puzzleslib=required
+dependencies.neoforge.puzzleslib=required
 
-# Required Dependencies
-dependenciesRequiredFabricCurseForge=fabric-api, forge-config-api-port-fabric, puzzles-lib
-dependenciesRequiredNeoForgeCurseForge=puzzles-lib
-dependenciesRequiredFabricModrinth=fabric-api, forge-config-api-port, puzzles-lib
-dependenciesRequiredNeoForgeModrinth=puzzles-lib
+distributions.github.slug=statuemenus
+
+environments.client=required
+environments.server=required
